fix: button class names, remove white spaces, changed display Flex.

--- a/src/components/ComponentButtons/buttons.scss
+++ b/src/components/ComponentButtons/buttons.scss
@@ -5,7 +5,7 @@
     border: 0;
     border-radius: 10px;
     cursor: pointer;
-    font-family: Poppins;
+    font-family: $mainFont;
     font-style: normal;
     font-size: 18px;
     font-weight: 600;
@@ -14,7 +14,7 @@
     text-align: center;
 }
 
-.btn--subscribe {
+.btn--primary {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.35);
     color: $purple;
     font-size: 20px;
@@ -23,53 +23,54 @@
     transition: 0.5s;
 }
 
-.btn--subscribe:hover {
+.btn--primary:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.35);
     transition: 0.5s;
 }
 
-.btn--comunicate-white {    
+.btn--secondary-white {    
     align-items: center;
     color: $pink;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     line-height: 27px;
     letter-spacing: 0.15em;
     margin: 0 auto;
+    position: relative;
 }
 
-.btn--comunicate-white::after {
+.btn--secondary-white::after {
     content: "";
     background-image: url(../../images/svg/arrow-pink.svg);
     display: inline-block;
     width: 16px;
     background-repeat: no-repeat;
     height: 21px;
+    position: relative;
+    top: 4px;
+    margin: 0 10px;
 }
 
-.btn--comunicate-pink {
+.btn--secondary-pink {
     align-items: center;
     background: $pink;
     color: $white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     line-height: 27px;
     letter-spacing: 0.15em;
     margin: 0 auto;
 }
 
-.btn--comunicate-pink::after {
+.btn--secondary-pink::after {
     content: "";
     background-image: url(../../images/svg/arrow-white.svg);
     display: inline-block;
     width: 16px;
     background-repeat: no-repeat;
     height: 21px;
+    position: relative;
+    top: 4px;
+    margin: 0 10px;
 }
 
-.btn--comunicate-big {
+.btn--secondary-big {
     box-shadow: 0 40px 30px rgba(0, 0, 0, 0.25);
     border-radius: 0px;
     color: $purple;
@@ -80,7 +81,7 @@
     transition: 0.5s;
 }
 
-.btn--comunicate-big:hover {
+.btn--secondary-big:hover {
     box-shadow: 0 20px 15px rgba(0, 0, 0, 0.25);
     transition: 0.5s;
 }
